Setting up payment methods for issue #837

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -437,12 +437,15 @@ define.backtolist=Back To List
 define.both=Both
 define.cancel=Cancel
 define.cart=Order
+define.cash=Cash
 define.charge=Charge
+define.check=Check
 define.comments=Comments
 define.confirm=Confirm
 define.contentAccess=Content Access
 define.create=Create
 define.credit=Credit
+define.creditCard=Credit Card
 define.default=Default
 define.definedin=Defined In
 define.delete=Delete
@@ -451,12 +454,14 @@ define.disabled=Disabled
 define.edit=Edit
 define.email=Email
 define.exportlist=Export List
+define.external=External
 define.false=False
 define.filter=Filter
 define.fixedAmount=Fixed Amount
 define.fulfillment=Fulfillment
 define.fulfullment=Fulfillment
 define.general=General
+define.giftCard=Gift Card
 define.global=Global
 define.gracePeriod=Grace Period
 define.here=Here
@@ -554,6 +559,7 @@ entity.OrderFulfillment.chargeAfterDiscount=Total Charge
 entity.OrderFulfillment.orderFulfillmentID=Order Fulfillment ID
 entity.OrderItem.quantityUnreceived=Qty. Unreceived
 entity.OrderPayment.amountReceived=Amount Received
+entity.PaymentMethod.paymentIntegration=Payment Service
 entity.PermissionGroup.permissionGroupID=Permission Group ID
 entity.PermissionGroup.permissionGroupName=Permission Group Name
 entity.PriceGroupRate.DisplayName=Name
@@ -1022,7 +1028,8 @@ entity.ordertiem=Order Item
 entity.paymentMethod.creditCard=Credit Card
 entity.paymentMethod.paymentMethodCode=Payment Method Code
 entity.paymentmethod=Payment Method
-entity.paymentmethod.allowSaveFlag=Allow Save
+entity.paymentmethod.allowSaveFlag=Allow Accounts to Save
+entity.paymentmethod.allowSaveFlag_hint=If this is set to yes, then people will be able to save payment methods of this type to their account.
 entity.paymentmethod.paymentMethodID=Payment Method ID
 entity.paymentmethod.paymentmethodname=Payment Method Name
 entity.paymentmethod.paymentmethodtype=Payment Method Type
