Hotfix for issue #860 and also a hotfix for saving brand issue.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -73,6 +73,7 @@ admin.order.createreturnorder.processOption.quantity=Return Qty.
 admin.order.createreturnorder_nav=Create Return Order
 admin.order.orderfulfillmenttabs.orderfulfillmentitems=Order Fulfillment Items
 admin.order.orderpaymenttabs.creditcardtransactions=Credit Card Transactions
+admin.order.orderreturntabs.orderreturnitems=Order Return Items
 admin.order.ordertabs.orderdeliveries=Order Deliveries
 admin.order.ordertabs.orderfulfillments=Order Fulfillments
 admin.order.ordertabs.orderitems=Order Items
@@ -553,6 +554,8 @@ entity.OrderFulfillment.chargeAfterDiscount=Total Charge
 entity.OrderFulfillment.orderFulfillmentID=Order Fulfillment ID
 entity.OrderItem.quantityUnreceived=Qty. Unreceived
 entity.OrderPayment.amountReceived=Amount Received
+entity.OrderReturn.orderReturnID=Order Return ID
+entity.OrderReturn.returnLocation=Return Location
 entity.PermissionGroup.permissionGroupID=Permission Group ID
 entity.PermissionGroup.permissionGroupName=Permission Group Name
 entity.PriceGroupRate.DisplayName=Name
