Working on issue #838

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1755,6 +1755,8 @@ setting.emailSubject=Email Subject
 setting.emailToAddress=Email To Address
 setting.fulfillmentMethodAutoLocation=Automatic Fulfillment Location
 setting.fulfillmentMethodAutoLocation_hint=This location will be used for an 'auto' fulfillment methods.  It can be overridden in each 'auto' fulfillment method if you create multiple of that type.
+setting.fulfillmentMethodAutoMinReceivedPercentage=Min. Amount Received Percentage
+setting.fulfillmentMethodAutoMinReceivedPercentage_hint=In order for an auto fulfillment to occur this percentage can be set so that X% of the amount for the items being fulfilled actually be received before fulfillment takes place.  Typically this is set to 0 or 100 saying that you either require or don't require payment to be received before the fulfillment automatically happens
 setting.fulfillmentMethodEmailCC=Email CC
 setting.fulfillmentMethodEmailFrom=Email From
 setting.fulfillmentMethodEmailSubjectString=Email Subject Template
