Lots of updates to the order item detail, and resolved issue #861

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -72,6 +72,10 @@ admin.order.createreturnorder=Create Return Order
 admin.order.createreturnorder.processOption.quantity=Return Qty.
 admin.order.createreturnorder_nav=Create Return Order
 admin.order.orderfulfillmenttabs.orderfulfillmentitems=Order Fulfillment Items
+admin.order.orderitemtabs.deliveryitems=Delivery Items
+admin.order.orderitemtabs.promotions=Promotions
+admin.order.orderitemtabs.stockreceiveritems=Stock Receiver Items
+admin.order.orderitemtabs.taxes=Taxes
 admin.order.orderpaymenttabs.creditcardtransactions=Credit Card Transactions
 admin.order.orderreturntabs.orderreturnitems=Order Return Items
 admin.order.ordertabs.orderdeliveries=Order Deliveries
@@ -559,6 +563,7 @@ entity.OrderDelivery_plural=Order Deliveries
 entity.OrderFulfillment.chargeAfterDiscount=Total Charge
 entity.OrderFulfillment.orderFulfillmentID=Order Fulfillment ID
 entity.OrderItem.quantityUnreceived=Qty. Unreceived
+entity.OrderItem.skuPrice=Sku Price
 entity.OrderPayment.amountReceived=Amount Received
 entity.OrderReturn.orderReturnID=Order Return ID
 entity.OrderReturn.returnLocation=Return Location
@@ -571,6 +576,7 @@ entity.PriceGroupRate.roundingRule=Rounding Rule
 entity.Product.calculatedQATS=QATS
 entity.ProductImage.imageFile=Image
 entity.ProductImage_plural=Product Images
+entity.PromotionApplied_plural=Applied Promotions
 entity.PromotionQualifier.maximumItemPrice=Maximum Item Price
 entity.PromotionQualifier.maximumItemQuantity=Maximum Item Quantity
 entity.PromotionQualifier.maximumOrderQuantity=Maximum Order Quantity
@@ -662,6 +668,7 @@ entity.TaskSchedule.nextRunDateTime=Next Run Time
 entity.TaskSchedule.schedule=Schedule
 entity.TaskSchedule.startDateTime=Start Date
 entity.TaskSchedule.successEmailList=Success Emails
+entity.TaxApplied_plural=Applied Taxes
 entity.UpdatePrice=Price
 entity.Vendor.brands=Brands Offered
 entity.Vendor.emailAddress=Email Address
@@ -737,6 +744,7 @@ entity.address.stateCode_validateRequired=Please enter a valid State
 entity.address.street2Address=Street Address 2
 entity.address.streetAddress=Street Address
 entity.address.streetAddress_validateRequired=Please enter a vaild Street Address
+entity.addressZone.addressZoneName=Address Zone Name
 entity.addresszone=Address Zone
 entity.addresszone.addressZoneID=Address Zone ID
 entity.addresszone.addressZoneLocations=Address Zone Locations
@@ -1421,6 +1429,8 @@ entity.task.timeouttime=Task Timeout
 entity.task_plural=Tasks
 entity.taskschedule=Task Schedule
 entity.taskschedule_plural=Task Schedules
+entity.taxApplied.taxAmount=Tax Amount
+entity.taxApplied.taxRate=Tax Rate
 entity.taxCategory.taxCategoryID=Tax Category ID
 entity.taxCategory.taxCategoryName=Tax Category Name
 entity.taxCategoryRate.addressZone=Address Zone
