Working on Issue #633

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -284,6 +284,7 @@ admin.setting.processtask.processOption.taskScheduleID=Schedule
 admin.setting.processtask_nav=Process Task
 admin.setting.settings=Settings
 admin.setting.settings_nav=Settings
+admin.setting.settingtabs.account=Account
 admin.setting.settingtabs.advanced=Advanced Settings
 admin.setting.settingtabs.brand=Brand Settings
 admin.setting.settingtabs.fulfillmentmethod=Fulfillment Method Settings
@@ -442,15 +443,12 @@ define.backtolist=Back To List
 define.both=Both
 define.cancel=Cancel
 define.cart=Order
-define.cash=Cash
 define.charge=Charge
-define.check=Check
 define.comments=Comments
 define.confirm=Confirm
 define.contentAccess=Content Access
 define.create=Create
 define.credit=Credit
-define.creditCard=Credit Card
 define.default=Default
 define.definedin=Defined In
 define.delete=Delete
@@ -466,7 +464,6 @@ define.fixedAmount=Fixed Amount
 define.fulfillment=Fulfillment
 define.fulfullment=Fulfillment
 define.general=General
-define.giftCard=Gift Card
 define.global=Global
 define.gracePeriod=Grace Period
 define.here=Here
@@ -513,6 +510,7 @@ define.sort=Sort
 define.status=Status
 define.subscription=Subscription
 define.system=System
+define.termPayment=Term Payment
 define.true=True
 define.unlimited=Unlimited
 define.username=Username
@@ -568,6 +566,7 @@ entity.OrderPayment.amountReceived=Amount Received
 entity.OrderReturn.orderReturnID=Order Return ID
 entity.OrderReturn.returnLocation=Return Location
 entity.PaymentMethod.paymentIntegration=Payment Service
+entity.PaymentTerm.term=Term
 entity.PermissionGroup.permissionGroupID=Permission Group ID
 entity.PermissionGroup.permissionGroupName=Permission Group Name
 entity.PriceGroupRate.DisplayName=Name
@@ -1038,6 +1037,16 @@ entity.orderreturn_plural=Order Returns
 entity.ordertiem=Order Item
 entity.paymentMethod.creditCard=Credit Card
 entity.paymentMethod.paymentMethodCode=Payment Method Code
+entity.paymentMethod.paymentMethodType.cash=Cash
+entity.paymentMethod.paymentMethodType.check=Check
+entity.paymentMethod.paymentMethodType.creditCard=Credit Card
+entity.paymentMethod.paymentMethodType.external=External
+entity.paymentMethod.paymentMethodType.giftCard=Gift Card
+entity.paymentMethod.paymentMethodType.termPayment=Term Payment
+entity.paymentTerm=Payment Term
+entity.paymentTerm.paymentTermID=Payment Term ID
+entity.paymentTerm.paymentTermName=Payment Term Name
+entity.paymentTerm_plural=Payment Terms
 entity.paymentmethod=Payment Method
 entity.paymentmethod.allowSaveFlag=Allow Accounts to Save
 entity.paymentmethod.allowSaveFlag_hint=If this is set to yes, then people will be able to save payment methods of this type to their account.
@@ -1737,6 +1746,12 @@ permission.warehouse.liststockreceiver=Stock Receiver - List
 permission.warehouse.savestockreceiver=Stock Receiver - Save
 print.packingSlip=Packing Slip
 print.packingslip=Packing Slip
+setting.accountEligiblePaymentTerms=Eligible Payment Terms
+setting.accountEligiblePaymentTerms_hint=This should be a list of all the available payment terms an account can utilize on a given order.
+setting.accountPaymentTerm=Default Account Payment Term
+setting.accountPaymentTerm_hint=This is the default term that will be applied to an accounts order when it is placed
+setting.accountTermCreditLimit=Term Account Credit Limit
+setting.accountTermCreditLimit_hint=This value represents the maximum amount of open unpaid term payments that are allowed for a given account.
 setting.brandDisplayTemplate=Brand Display Template
 setting.brandHTMLTitleString=Brand HTML Title String
 setting.brandMetaDescriptionString=Brand Meta Description String
