Working on Issue #633

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,6 @@
 
 admin.account=Account Manager
+admin.account.accounttabs.accountsettings=Account Settings
 admin.account.accounttabs.addresses=Addresses
 admin.account.accounttabs.carts=Carts
 admin.account.accounttabs.customattributes=Custom Attributes
