Working on payments

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -520,6 +520,8 @@ define.yes=Yes
 email.deliveryconfirmation=Delivery Confirmation
 email.orderConfirmation=Order Confirmation
 email.orderDeliveryConfirmation=Order Delivery Confirmation
+entity.Account.termAccountAvailableCredit=Term Account Available Credit
+entity.Account.termAccountBalance=Term Account Balance
 entity.AccountPaymentMethod_plural=Account Payment Methods
 entity.Address.norecords=No Addresses Defined
 entity.Address_plural=Addresses
