Payment entity name updates.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -77,7 +77,7 @@ admin.order.orderitemtabs.deliveryitems=Delivery Items
 admin.order.orderitemtabs.promotions=Promotions
 admin.order.orderitemtabs.stockreceiveritems=Stock Receiver Items
 admin.order.orderitemtabs.taxes=Taxes
-admin.order.orderpaymenttabs.creditcardtransactions=Credit Card Transactions
+admin.order.orderpaymenttabs.paymenttransactions=Payment Transactions
 admin.order.orderreturntabs.orderreturnitems=Order Return Items
 admin.order.ordertabs.orderdeliveries=Order Deliveries
 admin.order.ordertabs.orderfulfillments=Order Fulfillments
@@ -534,13 +534,6 @@ entity.AttributeSet.accountSaveFlag=Enable Account Saving
 entity.AttributeSet.additionalCharge=Additional Charge
 entity.AttributeSet.requiredFlag=Required Flag
 entity.Comment.publicFlag=Public
-entity.CreditCardTransaction=Credit Card Transaction
-entity.CreditCardTransaction.avsCode=AVS Code
-entity.CreditCardTransaction.message=Message
-entity.CreditCardTransaction.providerTransactionID=Provider Transaction ID
-entity.CreditCardTransaction.statusCode=Status Code
-entity.CreditCardTransaction.transactionType=Transaction Type
-entity.CreditCardTransaction_plural=Credit Card Transactions
 entity.Email.emailID=Email ID
 entity.Email.eventName=Event Name
 entity.EmailTemplate.emailTemplateID=Email Template ID
@@ -862,7 +855,6 @@ entity.country.streetAddressLabel=Street Address Label
 entity.country.streetAddressRequiredFlag=Require Street Address
 entity.country.streetAddressShowFlag=Show Street Address
 entity.country_plural=Countries
-entity.creditcardtransaction.authorizationcode=Auth. Code
 entity.currency=Currency
 entity.currency.currencyCode=Currency Code
 entity.currency.currencyLocal=Currency Local
@@ -1050,6 +1042,14 @@ entity.paymentTerm=Payment Term
 entity.paymentTerm.paymentTermID=Payment Term ID
 entity.paymentTerm.paymentTermName=Payment Term Name
 entity.paymentTerm_plural=Payment Terms
+entity.paymentTransaction=Payment Transaction
+entity.paymentTransaction.authorizationcode=Auth. Code
+entity.paymentTransaction.avsCode=AVS Code
+entity.paymentTransaction.message=Message
+entity.paymentTransaction.providerTransactionID=Provider Transaction ID
+entity.paymentTransaction.statusCode=Status Code
+entity.paymentTransaction.transactionType=Transaction Type
+entity.paymentTransaction_plural=Payment Transactions
 entity.paymentmethod=Payment Method
 entity.paymentmethod.allowSaveFlag=Allow Accounts to Save
 entity.paymentmethod.allowSaveFlag_hint=If this is set to yes, then people will be able to save payment methods of this type to their account.
