Working on issue #870

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -534,6 +534,7 @@ entity.AttributeSet.accountSaveFlag=Enable Account Saving
 entity.AttributeSet.additionalCharge=Additional Charge
 entity.AttributeSet.requiredFlag=Required Flag
 entity.Comment.publicFlag=Public
+entity.Currency.formattedExample=Formatted Example
 entity.Email.emailID=Email ID
 entity.Email.eventName=Event Name
 entity.EmailTemplate.emailTemplateID=Email Template ID
